# trivy-scheduler

./: .gitlab-ci.yml  Cargo.toml  Dockerfile  LICENSE.md
src/: main.rs
