[package]
name = "trivy-scheduler"
version = "0.1.0"
authors = ["Erin Olivia <erin@erin.moe>"]
edition = "2018"

[dependencies]
env_logger = "0.8.3"
futures = "0.3.12"
tokio = { version = "1.2.0", features = ["macros"] }
shiplift = { git = "https://github.com/softprops/shiplift.git", branch = "master" }
job_scheduler = "1.2.1"
clap = "2.33.3"
